--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@ out/
 # Ignores development broadcast logs
 !/broadcast
 /broadcast/*/31337/
-/broadcast/*/11155111/
-/broadcast/*/1/
 /broadcast/**/dry-run/
+/broadcast/
 
 # Docs
 docs/
