--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remappings = ["@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"]
+remappings = ["@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/", "@setToken/contracts=src/set-tokens-v2/"]
+
+# [rpc_endpoints]
+# SEPOLIA_URL = "${SEPOLIA_URL}"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
