--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remappings = ["@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/", "@setToken/contracts=src/set-tokens-v2/"]
+remappings = ["@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/", "@setToken/contracts=src/set-tokens-v2/", "@mockERC20=src/mock"]
 
 # [rpc_endpoints]
 # SEPOLIA_URL = "${SEPOLIA_URL}"
