--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/OpenZeppelin-contracts-08"]
+	path = lib/OpenZeppelin-contracts-08
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
