--- a/env.example
+++ b/env.example
@@ -1,4 +1,9 @@
 ETHERSCAN_API_KEY=
 SEPOLIA_URL=
-MANAGER_PRIVATE_KEY=
+# Controller Private key
 SET_TOKEN_MANAGER_PRIVATE_KEY=
+# Token Set Private key
+MANAGER_PRIVATE_KEY=
+# User addresses
+USER_ONE=
+USER_TWO=
